# aurora-voice

./: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: generate-icons.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(main)/: layout.tsx
src/app/analytics/: page.tsx
src/app/app/: layout.tsx  page.tsx
src/app/speakers/: page.tsx
src/components/analytics/: MetricsCard.tsx  TrendChart.tsx
src/components/integrations/: integrations-panel.tsx
src/components/landing/: FeaturesGrid.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  PodcastSection.tsx  ProblemSolution.tsx  TechStack.tsx  index.ts
src/components/layout/: app-layout.tsx  meeting-sidebar.tsx
src/components/meeting/: follow-up-email-modal.tsx  quick-actions-panel.tsx  speaker-mapping-dialog.tsx
src/components/onboarding/: index.ts  onboarding-modal.tsx
src/components/output/: markdown-view.tsx  streaming-text.tsx
src/components/privacy/: DataExport.tsx  OllamaWizard.tsx  PrivacyBadge.tsx
src/components/providers/: api-key-loader.tsx
src/components/research/: research-panel.tsx
src/components/search/: SearchPanel.tsx
src/components/speakers/: speaker-assignment.tsx
src/hooks/: use-hotkey.ts  use-live-diarization.ts  use-live-transcript.ts  use-onboarding.ts  use-recorder.ts  use-research.ts
src/test/: setup.ts
src/types/: agent.ts  index.ts  meeting.ts  project.ts  research.ts  speaker.ts  task.ts
(+87 files in other folders)
